--- a/doc/Changelog
+++ b/doc/Changelog
@@ -1,12 +1,15 @@
 Change Log
 ==========
 
+Release 0.6.0.12
+    - fixed db query, add quotes arround db field with name "recursive"
+
 Release 0.6.0.11
     - fixed bug in user list showing all users as admin users
     - fixed typo in html template
     - fixed user administration, password change uses now password policy of user instead
       of asdmin policy
-    
+
 Release 0.6.0.9
     - fixed bug #57, installer uses a wrong database name for creating messages table.
       Thanks to Włodzimierz Donatowicz
